Added identifying ingredients from image feature with api call

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity
             android:name=".RecipeListActivity"
             android:exported="false" />
+        <activity
+            android:name=".IdentifyIngredientsActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
